# gtests_for_mvvm_unreal_application

./: .gitignore  README.md
cmake_gtest/: cmake_gtest.uproject
cmake_gtest/Source/: cmake_gtest.Target.cs  cmake_gtestEditor.Target.cs
cmake_gtest/Source/common/ModuleA/: ModuleA.Build.cs  ModuleA.cpp  ModuleA.h
cmake_gtest/Source/common/ModuleA/Private/AExample/: AExampleModel.cpp  AExampleViewModel.cpp
cmake_gtest/Source/common/ModuleA/Public/: Structs.h
cmake_gtest/Source/common/ModuleA/Public/AExample/: AExampleModel.h  AExampleViewModel.h
cmake_gtest/Source/common/ModuleB/: ModuleB.Build.cs  ModuleB.cpp  ModuleB.h
cmake_gtest/Source/common/ModuleB/FolderA/Private/: AExample.cpp  AExampleBase.cpp
cmake_gtest/Source/common/ModuleB/FolderA/Public/: AExample.h  AExampleBase.h
cmake_gtest/Source/common/ModuleB/FolderB/Private/: Comm.cpp
cmake_gtest/Source/common/ModuleB/FolderB/Public/: Comm.h
cmake_gtest/Source/common/ModuleB/FolderC/Public/: Types.h
cmake_gtest/Source/common/ModuleB/FolderD/Public/: Signal.h
cmake_gtest/Test/: CMakeLists.txt
cmake_gtest/Test/Unit/AExampleTest/: AExampleStructDelegateMock.h  AExampleTest.cpp  AExampleViewModel.generated.h  CMakeLists.txt
cmake_gtest/Test/Unit/Defines/: Defines.h
cmake_gtest/Test/Unit/Mock/: CommMock.h  DelegateMock.h
cmake_gtest/Test/Unit/Mock/Engine/: World.h
cmake_gtest/Test/Unit/Mock/GameFramework/: Actor.h
cmake_gtest/Test/Unit/Mock/UObject/: NameTypes.h  Object.h
scripts/: build.py
